<resources>
    <string name="app_name">GithubUserApp</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="follower">%d Follower</string>
    <string name="following">%d Following</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="name">Name</string>
    <string name="username">Username</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="search">Cari User</string>
</resources>