<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.DetailUserActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/iv_profile"
                    app:layout_constraintStart_toStartOf="@+id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/username"
                    app:layout_constraintEnd_toEndOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:gravity="center_vertical"
                    android:text="@string/repository"
                    app:drawableStartCompat="@drawable/ic_baseline_folder_24"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/company"
                    app:drawableStartCompat="@drawable/ic_baseline_corporate_fare_24"
                    app:layout_constraintEnd_toEndOf="@+id/tv_location"
                    app:layout_constraintStart_toStartOf="@+id/tv_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintEnd_toEndOf="@+id/tv_username"
                    app:layout_constraintStart_toStartOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <ToggleButton
                    android:id="@+id/toggle_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/toggle_favorite"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/tv_username"
                    app:layout_constraintHorizontal_bias="0.536"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username">

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        tools:text="Followers" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        tools:text="Following" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:tabTextColor="@color/black" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                app:layout_constraintTop_toBottomOf="@+id/tabs_layout" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>